    use the function IR1-TO-DOT (which only survives the final tree shake if
    the feature :sb-devel is enabled at build time).
  * bug fix: method combination group selection interprets the symbol * as
    a wildcard element within proper qualifier-pattern lists.  (reported by
    Maciej Katafiasz and by Daniel Kochmański)

changes in sbcl-2.3.0 relative to sbcl-2.2.11:
  * enhancement: support for SLOT-VALUE and friends has been extended to
    structure and condition instances.
  * enhancement: the error message for invalid array index conditions is clearer.
    (lp#1999337, reported by Hadrien Lacour)
  * minor incompatible change: COMPILED-FUNCTION-P now returns false for
    generic functions.
  * minor incompatible change: the compiler emit STYLE-WARNING conditions for
    FIND and POSITION where the item sought can never be present in the
    sequence.
  * optimization: support computing the remainder of a constant division by
    multiplication.
  * optimization: faster out of line float truncation routines.
  * optimization: faster RATIONAL on 64-bit platforms.
  * optimization: more compact testing of widetags on x86-64 and arm64.
  * bug fix: type intersections of RATIONAL ranges with (NOT INTEGER) are
    computed more consistently.  (lp#1998008)
  * bug fix: fix miscompilation of integer/fixnum comparisons where both
    arguments are on the stack.

changes in sbcl-2.2.11 relative to sbcl-2.2.10:
  * platform support:
    ** arm64: allow the use of CLISP as a build host.  (lp#1996942, reported
       by Andrew Patterson)
  * enhancement: improvements to constraint propagation around comparison
    functions.
  * optimization: conditional move VOPs can work on boxed values and
    produce less consing.
  * optimization: NUNION and UNION are generally faster.
  * bug fix: slot-makunbound-using-class can be redefined without redefining
    the other slot methods.  (lp#1956621, reported by Michał Herda)