@@ -12,6 +12,8 @@ changes relative to sbcl-2.3.0:
   * bug fix: method combination group selection interprets the symbol * as
     a wildcard element within proper qualifier-pattern lists.  (reported by
     Maciej Katafiasz and by Daniel Kochmański)
+  * bug fix: &WHOLE can be used without error in method combination lambda
+    lists.  (reported by Daniel Kochmański)
 
 changes in sbcl-2.3.0 relative to sbcl-2.2.11:
   * enhancement: support for SLOT-VALUE and friends has been extended to
